# t265_robot_navigation

./: EXTRA.md  README.md  git_sync.sh
docs/: Doozy_Architecture  Robotics  drawio
doozy_description/: CMakeLists.txt
doozy_localization/: CMakeLists.txt  package.xml
doozy_navigation/: CMakeLists.txt  package.xml
robot/: CMakeLists.txt  README.md  package.xml
robot/config/: arm_joint.yaml  finger1_joint.yaml  finger2_joint.yaml  joint.yaml  mount_arm_joint.yaml  servo_joint.yaml  wrist_arm_joint.yaml
robot/launch/: display.launch  gazebo.launch  urdf_launcher.launch
robot/meshes/: 3D arm cover 5.STL  lidar.stl  lidar2.STL  mount.stl  outer case.STL  sensor.stl  shoulder.stl
robot/rviz/: rviz.rviz
robot/src/: keyboard.py  robot_control.py
robot/urdf/: my_robot.urdf  robot.urdf
robot_description/: CHANGELOG.rst  CMakeLists.txt  mybot.plugins.xacro  package.xml  rbcar.urdf.xacro
robot_description/launch/: ace_description.launch  start_everything.launch
robot_description/meshes/: buggy_1.stl
robot_description/meshes/astra/: T265.STL  arm.stl  body.stl  case_rsz.stl  caster.STL  finger.stl  finger2.stl  label.STL  lidar_mount.stl  long_label.STL  mount_arm.stl  wrist.stl
robot_description/meshes/bases/: rbcar_chassis.dae
robot_description/meshes/mynt/: S.mtl
robot_description/meshes/wheels/: rbcar_wheel1.dae  rbcar_wheel1.stl  rbcar_wheel2.dae
robot_description/urdf/: ace.gazebo  ace.xacro
robot_description/urdf/bases/: rbcar_base.gazebo.xacro  rbcar_base.urdf.xacro
robot_description/urdf/wheels/: suspension_wheel.urdf.xacro
(+70 files in other folders)
