<?xml version="1.0"?>
<package>
  <name>robot_description</name>
  <version>0.0.0</version>
  <description>The carbot_description package</description>

  <maintainer email="cth4kor@bosch.com">Chris Thaliyath</maintainer>


  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>


  <export>
    

  </export>
</package>
